Template for single server with streaming and chat server

--- a/streaming-only.yml
+++ b/streaming-only.yml
@@ -23,7 +23,7 @@ parameters:
     default: serranos
 
 resources:
-  StreamingSecGroup:
+  streaming_sec_group:
     type: OS::Neutron::SecurityGroup
     properties:
       name: streaming_server_sec
@@ -49,21 +49,35 @@ resources:
         port_range_min: 6970
         port_range_max: 65535
 
-  StreamingServer:
+  streaming_server:
     type: OS::Nova::Server
     properties:
       image: { get_param: image }
       flavor: { get_param: flavor }
       key_name: { get_param: key }
       security_groups:
-        - {get_resource: StreamingSecGroup}
+        - {get_resource: streaming_sec_group}
+      user_data_format: RAW
       user_data: |
         #!/bin/sh -ex
         echo "Update packages lists...";
         sudo apt-get update;
 
         echo "Installing Git and building packages...";
-        sudo apt-get install -y build-essential git;
+        sudo apt-get install -y build-essential git logrotate;
+
+        echo "Configuring logrotate...";
+        sudo tee -a /etc/logrotate.conf <<EOF
+        /home/ubuntu/easydss-logs/stats {
+            daily
+            copytruncate
+            rotate 3
+            compress
+            delaycompress
+            missingok
+        }
+        EOF
+        echo "Logrotate configured daily, rotate 3, with compression";
 
         echo "Getting EasyDarwin Streaming Server files...";
         cd /opt;
@@ -87,15 +101,21 @@ resources:
         echo "On-demand video folder created";
 
         echo "Attempting to run the streaming server...";
+        sudo -u ubuntu mkdir /home/ubuntu/easydss-logs;
+        sudo chmod 777 /home/ubuntu/easydss-logs;
         cd /opt/EasyDarwin/EasyDarwin;
-        sudo ./EasyDarwin -c ./WinNTSupport/easydarwin.xml &
+        sudo ./EasyDarwin -c ./WinNTSupport/easydarwin.xml -D >> /home/ubuntu/easydss-logs/stats &
         echo "Streaming server running and ready to stream";
-      user_data_format: RAW
+
+        #vlc rtsp://142.150.208.206:554/Demo.mp4 --sout '#es{access=file,mux=ps,url_audio=audio-%c.%m,url_video=video-%c.%m}'
+        #** screen -d -m vlc --intf dummy rtsp://142.150.208.206:554/Demo.mp4 -vvv --file-logging --logfile=vlc-log.txt
+        #vlc --intf dummy rtsp://142.150.208.206:554/Demo.mp4 -vvv --file-logging --logfile=vlc-log.txt --sout=file/ps:go.mpg
+
 
 outputs:
   instance_name:
     description: Name of the instance
-    value: { get_attr: [StreamingServer, name] }
+    value: { get_attr: [streaming_server, name] }
   instance_ip:
     description: IP address of the instance
-    value: { get_attr: [StreamingServer, first_address] }
+    value: { get_attr: [streaming_server, first_address] }
